fixed menue styles & spacing

--- a/work-it-out/src/components/NavBar/NavBar.css
+++ b/work-it-out/src/components/NavBar/NavBar.css
@@ -51,6 +51,8 @@
 }
 
 .Nav-Menu Button {
+  margin-top: -1.5em;
+  margin-bottom: 1rem;
   font-size: 1rem;
   font-weight: 500;
   border: none;
